ContosoUniversity/Infrastructure/kubernetes/deploy-cu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: contosouniversity
  name: contosouniversity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contosouniversity
  strategy: {}
  template:
    metadata:
      labels:
        app: contosouniversity
    spec:
      containers:
      - image: acrcujmaq.azurecr.io/contosouniversity:692
        name: contosouniversity
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contosouniversity
  name: contosouniversity-service
spec:
  #type: LoadBalancer
  ports:
  - port: 80
    #targetPort: 80
  selector:
    app: contosouniversity
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contosouniversity-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contosouniversity-service
            port:
              number: 80
    host: www.contoso.work
  tls:
  - hosts:
    - www.contoso.work
    secretName: contosouniversity-ingress-tls
